--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        <b>肖航课题组</b>开发了首个<b>基于字符串的可逆晶体表示法: SLICES</b>,实现了生成式AI驱动的<b>Text2Crystal</b>。SLICES有望成为AI驱动的晶体材料逆向设计的标准工具,即<b>晶体材料的"SMILES"</b>。 
+        <b>赵孔路的网页</b>就读于<b>香港岭南大学</b>,实现了深造的愿望<b>Text2ZHAO</b>。有望进一步深造<b>，走上人生巅峰</b>。 
     </p>
     <p>
-    The <b>XIAO Research Group</b> developed the first <b>string-based invertible, invariant crystallographic representation: SLICES</b>, achieving <b>Text2Crystal</b> powered by generative AI. SLICES has the potential to become a standard tool for <i> in-silico </i> materials discovery, i.e. "SMILES" for crystal structures.
+    The <b>Website of ZHAO</b> enrolled in <b>LingNan University</b>,realize the desire for further studies <b>Text2ZHAO</b> deep studying <b>on the way to the top </b>
     </p>
 </div>
 
