--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ notitle: true
 
 # groups of columns of {roles: list, width: num, image: bool}
 role-tables:
-- - roles: [faculty, postdoc, staff]
+- - roles: [age, postdoc, staff]
     width: 4
     image: true
-  - roles: [grad]
+  - roles: [sex]
     width: 8
     image: true
-- - roles: [collab, ugrad, ugrad-alum]
+- - roles: [class, height, height-alum]
     width: 5
     image: false
   - roles: [alum]
