--- a/friends.html
+++ b/friends.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Publications
+title: Friends
 ---
 <p>
     <a href="{{ site.base }}/bib/pubs.bib">Download BibTeX.</a>
