--- a/people.html
+++ b/people.html
@@ -3,11 +3,11 @@ layout: default
 title: 团队成员 People
 
 picture-role-groups:
-- {roles: [faculty, postdoc, staff], width: 4}
+- {roles: [age, postdoc, staff], width: 4}
 - {roles: [grad], width: 8}
 
 no-picture-role-groups:
-- {roles: [collab, ugrad, ugrad-alum], width: 5}
+- {roles: [class, height, height-alum], width: 5}
 - {roles: [alum], width: 7}
 ---
 
