--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ notitle: true
 role-tables:
 - - roles: [age, postdoc, staff]
     width: 4
-    image: true
+    image: false
   - roles: [sex]
     width: 8
-    image: true
+    image: false
 - - roles: [class, height, height-alum]
     width: 5
     image: false
@@ -22,10 +22,10 @@ role-tables:
 
 <div class="jumbotron">
     <p>
-        <b>赵孔路的网页</b>就读于<b>香港岭南大学</b>,实现了深造的愿望<b>Text2ZHAO</b>。有望进一步深造<b>，走上人生巅峰</b>。 
+        <b>赵孔路</b>就读于<b>香港岭南大学</b>,实现了深造的愿望<b></b>。有望进一步深造<b>，走上人生巅峰</b>。 
     </p>
     <p>
-    The <b>Website of ZHAO</b> enrolled in <b>LingNan University</b>,realize the desire for further studies <b>Text2ZHAO</b> deep studying <b>on the way to the top </b>
+     <b>ZHAO KongLu </b> enrolled in <b>LingNan University</b>,realize the desire for further studies <b></b> deep studying <b>on the way to the top </b>
     </p>
 </div>
 
