--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@ layout: default
 title: Home
 notitle: true
 
-# groups of columns of {roles: list, width: num, image: bool}
+# groups of columns of {roles: list, width: num}
 role-tables:
 - - roles: [age, postdoc, staff]
     width: 4
-    image: false
+   
   - roles: [sex]
     width: 8
-    image: false
+
 - - roles: [class, height, height-alum]
     width: 5
-    image: false
+
   - roles: [alum]
     width: 7
-    image: false
+
 
 ---
 
@@ -25,7 +25,7 @@ role-tables:
         <b>赵孔路</b>就读于<b>香港岭南大学</b>,实现了深造的愿望。有望进一步深造<b>，走上人生巅峰</b>。 
     </p>
     <p>
-     <b>ZHAO KongLu </b> enrolled in <b>LingNan University</b>,realize the desire for further studies deep studying <b>on the way to the top </b>
+     <b>ZHAO KongLu </b> enrolled in <b>LingNan University</b>,realized the desire for further studies, <b>on the way to the top. </b>
     </p>
 </div>
 
