--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ notitle: true
 
 # groups of columns of {roles: list, width: num}
 role-tables:
-- - roles: [age, postdoc, staff]
+- - roles: [faculty, postdoc, staff]
     width: 4
    
-  - roles: [sex]
+  - roles: [ugrad]
     width: 8
 
-- - roles: [class, height, height-alum]
+- - roles: [collab, ugrad, ugrade-alum]
     width: 5
 
   - roles: [alum]
